--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "zhf.html-encode",
-    "version": "1.0.1",
-    "description": "no description",
+    "version": "1.0.0",
+    "description": "把html里面的尖括号字符转义成十进制编码",
     "main": "dist/index.min.js",
     "scripts": {
         "codeLint": "eslint --ext .js,.vue,.html ./",
